tests/test-dirs/upstream-typing-recovery/original-tests/illegal_letrec.compilers.reference
File "illegal_letrec.ml", line 1:
Error: Multiple errors were encountered
File "illegal_letrec.ml", line 11, characters 8-11:
11 | let rec A x = A (A ())
             ^^^
  Only variables are allowed as left-hand side of let rec
File "illegal_letrec.ml", line 17, characters 10-18:
17 |   let rec (_ as f) = fun () -> f () in
               ^^^^^^^^
  Only variables are allowed as left-hand side of let rec
File "illegal_letrec.ml", line 20, characters 12-16:
20 | let rec x = f ~x
                 ^^^^
  This kind of expression is not allowed as right-hand side of let rec
File "illegal_letrec.ml", line 21, characters 12-21:
21 | let rec x = f ~x ~z:0
                 ^^^^^^^^^
  This kind of expression is not allowed as right-hand side of let rec
File "illegal_letrec.ml", line 25, characters 2-37:
25 |   g ~given:(f ~omitted_g:() ~given:0)
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  This kind of expression is not allowed as right-hand side of let rec
File "illegal_letrec.ml", line 29, characters 17-19:
29 | let t : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
